creat home.html

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,23 @@
-   # Игнорируем папку .idea
+
+# Игнорирование директории проекта IDE
 .idea/
 
-   # Игнорируем все файлы с расширением .log
-*.log
+# Игнорирование виртуальных окружений
+.poetry/
+venv/
 
-   # Игнорируем папку tmp
-tmp/
+# Игнорирование кэшированных файлов Python
+__pycache__/
+*.pyc
+
+# Игнорирование базы данных SQLite
+*.sqlite
+*.sqlite3
+
+# Игнорирование других временных файлов
+*.log
+*.db
+
+# Игнорирование файлов конфигурации среды
+.env
+
