--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ requests = "^2.32.5"
 django = "^5.2.8"
 whitenoise = "^6.11.0"
 gunicorn = "^23.0.0"
+psycopg2-binary = "^2.9.11"
+python-dotenv = "^1.2.1"
 
 
 [tool.poetry.group.dev.dependencies]
