--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python-dotenv = "^1.2.1"
 pillow = "^12.0.0"
 ipython = "^9.7.0"
 django-crispy-forms = "^2.5"
+redis = "^7.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
